FlowTeam/force-app/main/default/objects/Project_Resource__c/Project_Resource__c.object-meta.xml
<CustomObject>
    <label>Project/Resource</label>
    <nameField>
        <displayFormat>PR-{0000}</displayFormat>
        <label>Project/Resource Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project/Resources</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>