FlowTeam/force-app/main/default/objects/Project_Resource__c/fields/NombreApellidoUser__c.field-meta.xml
<CustomField>
    <fullName>NombreApellidoUser__c</fullName>
    <formula>User__r.FirstName + &quot; &quot; + User__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NombreApellidoUser</label>
    <type>Text</type>
</CustomField>