FlowTeam/force-app/main/default/objects/Project_Resource__c/fields/ProjectStatus__c.field-meta.xml
<CustomField>
    <fullName>ProjectStatus__c</fullName>
    <formula>Text(Project__r.Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ProjectStatus</label>
    <type>Text</type>
</CustomField>