FlowTeam/force-app/main/default/objects/Project_Resource__c/fields/Rate_PerHour__c.field-meta.xml
<CustomField>
    <fullName>Rate_PerHour__c</fullName>
    <formula>$User.Rate_PerHour__c</formula>
    <label>Rate/Per Hour</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>