FlowTeam/force-app/main/default/objects/Project_Resource__c/fields/Resource_Assigned_Hours__c.field-meta.xml
<CustomField>
    <fullName>Resource_Assigned_Hours__c</fullName>
    <label>Resource Assigned Hours</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>