FlowTeam/force-app/main/default/objects/Project_Resource__c/fields/Rol__c.field-meta.xml
<CustomField>
    <fullName>Rol__c</fullName>
    <formula>User__r.UserRole.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rol</label>
    <type>Text</type>
</CustomField>